Fixed SASS deprecation warining making it possible to deploy to Heroku again.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -17,10 +17,10 @@
 
 !color_body                  = #e5e5e5
 !color_link                  = #0033cc
-!color_link_hover            = white
+!color_link_hover            = "white"
 !color_link_hover_background = #0033cc
-!color_link_image            = white
-!color_link_image_background = white
+!color_link_image            = "white"
+!color_link_image_background = "white"
 
 // Standard HTML tags.
 //------------------------------------------------------------------------------
