--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -4,13 +4,11 @@
     %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
     %title Fat Free CRM Administration
     == <!-- #{controller.controller_name} : #{controller.action_name} -->
-    = stylesheet_link_tag "screen", :cache => "cache/all"
-    = stylesheet_link_tag "calendar_date_select/default.css"
-    = stylesheet_link_tag "/facebox/facebox.css"
+    = stylesheet_link_tag "screen", "facebox.css", :cache => "cache/all"
     %style= yield :styles
 
     = javascript_include_tag :defaults, :cache => "cache/all"
-    = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", "/facebox/facebox.js", :cache => "cache/classes"
+    = javascript_include_tag "crm_classes.js", "facebox.js", :cache => "cache/classes"
     %script{:type => "text/javascript"}= yield :javascript
 
   %body.admin
@@ -20,4 +18,5 @@
     %script{:type => "text/javascript"}
       = "crm.base_url = '#{Setting.base_url}';" unless Setting.base_url.blank?
       = get_browser_timezone_offset
+      = activate_facebox
       = yield :javascript_epilogue
