--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,7 @@
 .standalone
   - form_for(@user, :html => one_submit_only(:user)) do |f|
     .title_tools #{t:already_signed_up} #{link_to t(:login_now_link), login_path}
-    .title #{t:sign_up_title}
+    .title #{t:sign_up}
     = f.error_messages
     .section
       .label #{t:email}:
