--- a/app/views/leads/_web.html.haml
+++ b/app/views/leads/_web.html.haml
@@ -1,24 +1,24 @@
 - edit ||= false
 - collapsed = session[:lead_presence].nil? # && @lead.errors.empty?
-= subtitle :lead_presence, collapsed, "Web Presence"
+= subtitle :lead_presence, collapsed, t(:web_presence)
 .section
   %small#lead_presence_intro{ hidden_if(!collapsed) }
-    = "You can add web presence information later." unless edit
+    = t(:intro, t(:web_presence_small)) unless edit
   #lead_presence{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
-          .label.top Website/Blog:
+          .label.top #{t:blog}:
           = f.text_field :blog, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label.top Twitter:
+          .label.top #{t:twitter}:
           = f.text_field :twitter, :style => "width:240px"
       %tr
         %td{ :valign => :top }
-          .label LinkedIn:
+          .label #{t:linked_in}:
           = f.text_field :linkedin, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label FaceBook:
+          .label #{t:facebook}:
           = f.text_field :facebook, :style => "width:240px"
