--- a/app/views/common/auto_complete.html.haml
+++ b/app/views/common/auto_complete.html.haml
@@ -2,6 +2,6 @@
   - unless @auto_complete.blank?
     - @auto_complete.each do |item|
       - name = item.name << (item.is_a?(Lead) ? " (#{item.company})" : "")
-      %li{ :id => item.to_param }= highlight(truncate(name, :lenght => 45), @query)
+      %li{ :id => item.to_param }= highlight(truncate(name, :length => 45), @query)
   - else
-    %li== No #{controller.controller_name} match <font color="yellow">#{@query}</font>
+    %li== #{t(:no_match, t(controller.controller_name + '_small'))} <font color="yellow">#{@query}</font>
