Translated Admin/User

--- a/app/views/admin/users/_edit.html.haml
+++ b/app/views/admin/users/_edit.html.haml
@@ -4,6 +4,6 @@
     = f.error_messages
     = render :partial => "admin/users/profile", :locals => { :f => f, :edit => true }
     .buttonbar
-      = f.submit "Save User"
-      or
+      = f.submit t(:save_user)
+      #{t:or}
       = link_to_cancel edit_admin_user_path(@user)
