--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,5 +1,5 @@
 .title= @user.full_name
 %p
 :erb
-  <%= link_to 'Edit', edit_admin_user_path(@user) %> |
-  <%= link_to 'Back', admin_users_path %>
+  <%= link_to t(:edit), edit_admin_user_path(@user) %> |
+  <%= link_to t(:back), admin_users_path %>
