Started to move hardcoded setting values to locale files

--- a/app/views/layouts/_tabbed.html.haml
+++ b/app/views/layouts/_tabbed.html.haml
@@ -1,7 +1,7 @@
 #tabs
   %ul
     - tabs.each do |tab|
-      %li= link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "")
+      %li= link_to(t(tab[:text]), tab[:url], :class => tab[:active] ? "active" : "")
 
 = show_flash
 %table{ :width => "100%", :height => "100%", :cellpadding => 0, :cellspacing => 0, :class => :tabbed }
