--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,8 +1,8 @@
 .title_tools
-  = link_to_inline(:options, url_for(:action => :options))
+  = link_to_inline(:options, url_for(:action => :options), :text => t(:options))
 
 .title
-  %span#title Recent Activity
+  %span#title #{t:recent_activity}
   = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
 .remote#options{ hidden }
 
@@ -10,7 +10,7 @@
   - unless @activities.empty?
     = render :partial => "activity", :collection => @activities
   - else
-    No activity records found.
+    #{t:no_activity_records}
 
 /
   Check out HTML source to view the output of the hook if you have sample plugin installed
