--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,12 +1,12 @@
-<h1>Editing comment</h1>
+<h1>#{t:edit_comment}</h1>
 
 <% form_for(@comment) do |f| %>
   <%= f.error_messages %>
 
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit t(:update) %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to t(:show), @comment %> |
+<%= link_to t(:back), comments_path %>
