--- a/app/views/passwords/new.html.haml
+++ b/app/views/passwords/new.html.haml
@@ -1,10 +1,10 @@
 .standalone
   - form_tag(passwords_path, one_submit_only(:passwords)) do
-    .title Forgot Password
-    .intro Please specify your email address and the instructions to reset your password will be sent to you.
+    .title #{t:forgot_password}
+    .intro #{t:password_intro}
     .section
-      .label Email address:
+      .label #{t:email}:
       = text_field_tag :email
     %br
     .buttonbar
-      = submit_tag "Reset Password", :id => "passwords_submit"
+      = submit_tag t(:reset_password), :id => "passwords_submit"
