--- a/app/views/common/_comment.html.haml
+++ b/app/views/common/_comment.html.haml
@@ -2,5 +2,5 @@
   = link_to avatar_for(comment.user, :size => "25x25"), user_path(comment.user)
   .body
     = link_to comment.user.full_name, user_path(comment.user)
-    %tt= time_ago(comment.created_at)
+    %tt= t(:time_ago, distance_of_time_in_words(Time.now, comment.created_at))
     %dt= simple_format comment.comment
