--- a/app/views/versions/_versions.html.haml
+++ b/app/views/versions/_versions.html.haml
@@ -5,7 +5,7 @@
     = t(:versions)
 
   .list#versions
-    - @versions = Version.history(object).paginate(:page => 1, :per_page => 10)
-    = render :partial => "versions/version", :collection => @versions
+    - versions = Version.history(object).paginate(:page => 1, :per_page => 10)
+    = render :partial => "versions/version", :collection => versions
 
-  = will_paginate @versions, :id => true, :params => {:action => :versions}
+  = will_paginate versions, :id => true, :params => {:action => :versions}
