--- a/app/views/home/_options.html.haml
+++ b/app/views/home/_options.html.haml
@@ -3,12 +3,11 @@
   = hidden_field_tag "account[user_id]", @current_user.id
 
   -# activity_options: Show %{models} %{action_type} performed by %{user} in the past %{period}
-  = t(:activity_options, :models => link_to(t(@asset).singularize.downcase, "#", :id => :asset), :action_type => link_to(t(@action + "_past_participle").downcase, "#", :id => :action_type), :user => link_to(t(@user), "#", :id => :user), :period => link_to(t(@duration).downcase, "#", :id => :duration)).html_safe
+  = t(:activity_options, :models => link_to(t(@asset).singularize.downcase, "#", :id => :asset), :action_type => link_to(t(@action + "_past_participle").downcase, "#", :id => :event), :user => link_to(t(@user), "#", :id => :user), :period => link_to(t(@duration).downcase, "#", :id => :duration)).html_safe
 %p
 
 %script
   = render "assets_menu"
-  = render "actions_menu"
+  = render "events_menu"
   = render "users_menu"
   = render "duration_menu"
-
